# mongomock-persistence

./: LICENSE  README.md  requirements.txt  setup.cfg
mongomock_persistence/: __init__.py  database.py  store.py
tests/: test__persistence.py
