[metadata]
name = mongomock-persistence
version = 0.0.3
author = Ivan Kondov
author_email = ivan.kondov@kit.edu
description = Mongomock with persistence
long_description = file: README.md
long_description_content_type = text/markdown
keywords = database testing
license = BSD-3-Clause
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Database
    Topic :: Other/Nonlisted Topic

[options]
zip_safe = false
packages = find:
python_requires = >=3.6
install_requires =
    pymongo
    mongomock

[options.extras_require]
test =
    flake8
    pytest

[options.packages.find]
exclude =
    mongomock-persistence.tests*

[flake8]
max-line-length = 120
exclude=__init__.py
